--- a/styles/serial.scss
+++ b/styles/serial.scss
@@ -3,3 +3,64 @@ header h1{
     margin: .3em;
 }
 
+main{
+    p{
+        margin: .5em 1em;
+    }
+
+    .characters{
+        h2{
+            margin: .5em .5em;
+        }
+
+        ul{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 1em;
+            list-style-type: none;
+            margin: 0 1em;
+
+            li{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding: .5em;
+                background-color: gray;
+                gap: .5em;
+                
+                img{
+                    border-radius: 10%;
+                }
+                h3{
+                    color: white;
+                }
+            }
+        }
+    }
+
+    .buttons{
+        margin-top: 3em;
+        display: flex;
+        justify-content: center;
+        gap: 1em;
+        a{
+            background-color: hotpink;
+            color: black;
+            text-decoration: none;
+            padding: 1em;
+            border-radius: 2em;
+            font-weight: bold;
+            transition: background-color 0.5s;
+
+            &:hover{
+                background-color: pink;
+                transition: background-color 0.5s;
+            }
+            &:active{
+                background-color: pink;
+                transition: background-color 0.5s;
+            }
+        }
+    }
+}
