--- a/styles/serial.scss
+++ b/styles/serial.scss
@@ -20,6 +20,7 @@ main{
             gap: 1em;
             list-style-type: none;
             margin: 0 1em;
+            width: 100%;
 
             li{
                 display: flex;
@@ -28,9 +29,11 @@ main{
                 padding: .5em;
                 background-color: gray;
                 gap: .5em;
+                max-width: 18em;
                 
                 img{
                     border-radius: 10%;
+                    width: 100%;
                 }
                 h3{
                     color: white;
