--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,7 +26,7 @@ main{
                     background-color: hotpink;
                     transition: background-color 0.4s;
                 }       
-                &:hover{
+                &:active{
                     background-color: hotpink;
                     transition: background-color 0.4s;
                 }      
